2022-09-25T16:28:45Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3122867106
* notice: last 14d: unq all: 2 30
* notice: prev accum: outdated-unq outdated-all / unq all: 33 141 / 48 171
* notice: next accum: outdated-unq outdated-all / unq all: 34 142 / 49 172
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2022-09-11] / [2022-09-25]

2022-09-25T02:20:20Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3120577819
* notice: last 14d: unq all: 2 30
* notice: prev accum: outdated-unq outdated-all / unq all: 32 140 / 47 170
* notice: next accum: outdated-unq outdated-all / unq all: 33 141 / 48 171
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2022-09-10] / [2022-09-24]

2022-09-24T02:21:30Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3116720537
* notice: last 14d: unq all: 2 30
* notice: prev accum: outdated-unq outdated-all / unq all: 31 138 / 47 168
* notice: next accum: outdated-unq outdated-all / unq all: 32 140 / 47 170
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +4 -0 -0 / 1 4
* notice: removed / changed dates: [2022-09-09] / [2022-09-23]

2022-09-23T16:33:04Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3114225377
* notice: last 14d: unq all: 2 30
* notice: prev accum: outdated-unq outdated-all / unq all: 31 138 / 47 166
* notice: next accum: outdated-unq outdated-all / unq all: 31 138 / 47 168
* notice: prev exec diff / last date diff / accum: unq all: +0 +2 -0 -0 / +1 +3 -0 -0 / 1 3
* notice: removed / changed dates: [] / [2022-09-23]

2022-09-23T08:28:27Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3111375871