@@ -1,13 +1,13 @@
 {
-  "timestamp" : "2022-09-25T16:28:45Z",
+  "timestamp" : "2022-09-26T08:30:04Z",
   "count_outdated" : 142,
   "uniques_outdated" : 34,
   "count" : 172,
-  "uniques" : 49,
+  "uniques" : 50,
   "clones" : [
     {
       "timestamp": "2022-09-12T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
@@ -98,6 +98,13 @@
     },
     {
       "timestamp": "2022-09-25T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-09-26T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "uniques": 1,
