@@ -1,3 +1,11 @@
+2022-09-26T08:30:04Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3126224293
+* notice: last 14d: unq all: 2 30
+* notice: prev accum: outdated-unq outdated-all / unq all: 34 142 / 49 172
+* notice: next accum: outdated-unq outdated-all / unq all: 34 142 / 50 172
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -1 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2022-09-12 2022-09-26]
+
 2022-09-25T16:28:45Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3122867106
 * notice: last 14d: unq all: 2 30
